--- a/client/styles/custom.scss
+++ b/client/styles/custom.scss
@@ -6,39 +6,39 @@ body {
 }
 
 .nav-bar {
-  position: fixed
-  top: 0
-  background-color: #fff
+  position: fixed;
+  top: 0;
+  background-color: #fff;
 
-  margin: 0 1rem
-  padding-top: 1rem
-  padding-bottom: 0.5rem
-  width: 100%
+  margin: 0 1rem;
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
+  width: 100%;
 
   .nav-item {
-    float: left
-    margin-right: 2rem
+    float: left;
+    margin-right: 2rem;
   }
 
   a {
-    color: $link-color
-    text-decoration: none
+    color: $link-color;
+    text-decoration: none;
 
     &.activePath {
-      color: $active-color
-      border-bottom: 1px solid $active-color
+      color: $active-color;
+      border-bottom: 1px solid $active-color;
     }
   }
 }
 
 .content {
-  padding-top: 5rem
+  padding-top: 5rem;
 
   > div {
-    margin: 0 1rem
+    margin: 0 1rem;
 
     &.rsvp {
-      margin: 0
+      margin: 0;
     }
 
   }
@@ -47,7 +47,7 @@ body {
     background-color: #eee;
 
     iframe {
-      width: 100%
+      width: 100%;
     }
 
 
@@ -55,7 +55,7 @@ body {
   }
 
   .rsvp iframe {
-    width: 100%
+    width: 100%;
   }
 
 }
