--- a/client/styles/skeleton.scss
+++ b/client/styles/skeleton.scss
@@ -7,6 +7,9 @@
 * 12/29/2014
 */
 
+$font_headings: "Playfair Display", serif;
+$font_body: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; ;
+
 
 /* Table of contents
 ––––––––––––––––––––––––––––––––––––––––––––––––––
@@ -124,7 +127,7 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: $font_body;
   color: #222; }
 
 
@@ -133,7 +136,10 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 2rem;
-  font-weight: 300; }
+  font-weight: 300; 
+  font-family: $font_headings;
+
+}
 h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
