--- a/client/styles/skeleton.scss
+++ b/client/styles/skeleton.scss
@@ -7,8 +7,8 @@
 * 12/29/2014
 */
 
-$font_headings: "Playfair Display", serif;
-$font_body: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; ;
+$font_headings: "Quicksand", sans-serif;
+$font_body: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 
 /* Table of contents
