--- a/client/styles/skeleton.scss
+++ b/client/styles/skeleton.scss
@@ -10,6 +10,8 @@
 $font_headings: "Quicksand", sans-serif;
 $font_body: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
+$font_color: #545454;
+
 
 /* Table of contents
 ––––––––––––––––––––––––––––––––––––––––––––––––––
@@ -128,7 +130,7 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: $font_body;
-  color: #222; }
+  color: $font_color; }
 
 
 /* Typography
@@ -141,7 +143,8 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
-h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
+h2 { font-size: 3.2rem; line-height: 1.25; letter-spacing: -.1rem; }
+//h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
 h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
 h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
@@ -150,7 +153,8 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 /* Larger than phablet */
 @media (min-width: 550px) {
   h1 { font-size: 5.0rem; }
-  h2 { font-size: 4.2rem; }
+  h2 { font-size: 3.8rem; }
+  //h2 { font-size: 4.2rem; }
   h3 { font-size: 3.6rem; }
   h4 { font-size: 3.0rem; }
   h5 { font-size: 2.4rem; }
