--- a/client/styles/skeleton.scss
+++ b/client/styles/skeleton.scss
@@ -153,10 +153,12 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 /* Larger than phablet */
 @media (min-width: 550px) {
   h1 { font-size: 5.0rem; }
-  h2 { font-size: 3.0rem; }
   //h2 { font-size: 4.2rem; }
-  h3 { font-size: 3.6rem; }
-  h4 { font-size: 3.0rem; }
+  //h3 { font-size: 3.6rem; }
+  //h4 { font-size: 3.0rem; }
+  h2 { font-size: 3.0rem; }
+  h3 { font-size: 2.8rem; }
+  h4 { font-size: 2.4rem; }
   h5 { font-size: 2.4rem; }
   h6 { font-size: 1.5rem; }
 }
