--- a/client/styles/custom.scss
+++ b/client/styles/custom.scss
@@ -15,20 +15,23 @@ html {
   position: fixed;
   top: 0;
   width: 100%;
-  margin: 0 auto;
   height: 4rem;
+
+  display: flex;
+  display: -ms-flexbox;
+  justify-content: center;
 
   background: #fff;
 }
 
 .nav-bar {
-  position: fixed;
+  position: relative;
   top: 0;
-  left: 50%;
-  transform: translate(-50%, 0);
   width: 28rem;
 
-  margin: 0 auto;
+  display: flex;
+  display: -ms-flexbox;
+  justify-content: center;
   padding-top: 1rem;
   padding-bottom: 0.5rem;
 
