--- a/client/styles/custom.scss
+++ b/client/styles/custom.scss
@@ -1,8 +1,12 @@
-$link_color:   #8e44ad;
-$active_color: #8e44ad;
+$link_color:   rebeccapurple;
+$active_color: rebeccapurple;
 
 html {
   overflow-y: scroll;
+
+  body {
+    font-size: 1.8em;
+  }
 }
 
 .center {
@@ -11,31 +15,31 @@ html {
   text-align: center;
 }
 
-.nav-background {
+// .nav-background {
+//   position: fixed;
+//   top: 0;
+//   width: 100%;
+//   height: 4rem;
+
+//   display: flex;
+//   display: -ms-flexbox;
+//   justify-content: center;
+
+//   background: #fff;
+// }
+
+.nav-bar {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 4rem;
 
-  display: flex;
-  display: -ms-flexbox;
-  justify-content: center;
-
-  background: #fff;
-}
-
-.nav-bar {
-  position: relative;
-  top: 0;
-  width: 28rem;
-
-  display: flex;
-  display: -ms-flexbox;
-  justify-content: center;
+  background-color: #fff;
   padding-top: 1rem;
   padding-bottom: 0.5rem;
 
-  background-color: #fff;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 
   .nav-item {
     float: left;
@@ -59,9 +63,8 @@ html {
 
 .content {
   padding-top: 6rem;
-  max-width: 650px;
-  margin: 0 auto;
-
+  max-width: 960px;
+  margin: 2rem auto;
 
   img {
     max-width: 100%;
@@ -74,7 +77,7 @@ html {
 
   a {
     color: $link_color;
-    text-decoration: none;
+    text-decoration: underline;
 
     &:hover {
       color: $active_color;
@@ -92,11 +95,21 @@ html {
   }
 
   .rsvp-link {
-    padding-bottom: 4rem;
+    a.button {
+      font-size: 1.6rem;
+      letter-spacing: 2px;
+      margin: 2rem;
 
-    a {
-      font-size: 1.3rem;
-      padding-bottom: 1rem;
+      color: #fff;
+      background-color: lightgray;
+      border: none;
+      text-decoration: none;
+
+      &:hover {
+        color: #fff;
+        background-color: hotpink;
+        text-decoration: none;
+      }
     }
   }
 
@@ -125,7 +138,4 @@ html {
     margin-left: 1rem;
 
   }
-
 }
-
-
