--- a/client/styles/custom.scss
+++ b/client/styles/custom.scss
@@ -50,11 +50,6 @@ html {
     color: #000;
     text-decoration: none;
 
-    &:hover {
-      color: $active_color;
-      text-decoration: dotted;
-    }
-
     &:focus {
       outline: none;
     }
@@ -96,6 +91,16 @@ html {
       margin: 0;
     }
 
+  }
+
+  .main-title {
+    h1 {
+      font-size: 8rem;
+    }
+  }
+
+  .main-splash {
+    margin: 3rem 0;
   }
 
   .rsvp-link {
